--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.1",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
     "feather-icons-react": "^0.6.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
+    "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "redux": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
